--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -552,6 +552,7 @@ html {
   background-color: #292929;
   opacity: 0;
   transition: 0.3s;
+  z-index: 900;
 }
 .overlay--active {
   visibility: visible;
